# Zero-os

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README_zh.md  rust-toolchain.toml
.cargo/: config.toml
.githooks/: pre-push
bootloader/: Cargo.toml
bootloader/src/: main.rs
docs/: roadmap.md
esp/: kernel.elf
esp/EFI/BOOT/: BOOTX64.EFI
kernel/: Cargo.toml  kernel.ld
kernel/.cargo/: config.toml
kernel/arch/: Cargo.toml  apic.rs  context_switch.rs  cpu_protection.rs  gdt.rs  hpet.rs  interrupts.rs  invpcid.rs  ipi.rs  lib.rs  smp.rs  syscall.rs
kernel/audit/: Cargo.toml  lib.rs
kernel/block/: Cargo.toml
kernel/block/src/: lib.rs  pci.rs
kernel/block/src/virtio/: blk.rs  mod.rs
kernel/cap/: Cargo.toml  lib.rs  types.rs
kernel/compliance/: Cargo.toml  lib.rs
kernel/cpu_local/: lib.rs
kernel/crypto/: Cargo.toml  lib.rs
kernel/drivers/: framebuffer.rs  keyboard.rs  lib.rs  vga_buffer.rs
kernel/iommu/: Cargo.toml  dmar.rs  domain.rs  fault.rs  interrupt.rs  lib.rs  vtd.rs
kernel/ipc/: Cargo.toml  futex.rs  ipc.rs  lib.rs  pipe.rs  sync.rs
kernel/kernel_core/: Cargo.toml  cgroup.rs  elf_loader.rs  exception_table.rs  fork.rs  ipc_namespace.rs  lib.rs  mount_namespace.rs  net_namespace.rs  pid_namespace.rs  process.rs  rcu.rs  scheduler_hook.rs  signal.rs  signal_frame.rs  syscall.rs  time.rs  user_namespace.rs  user_stack.rs  usercopy.rs
kernel/klog/: Cargo.toml  lib.rs
kernel/livepatch/: Cargo.toml  ecdsa_p256.rs  lib.rs
kernel/lsm/: lib.rs  policy.rs
kernel/mm/: Cargo.toml  buddy_allocator.rs  dma.rs  fallible_map.rs  lib.rs  memory.rs  oom_killer.rs  page_cache.rs  page_table.rs  tlb_shootdown.rs
kernel/net/: Cargo.toml
kernel/net/src/: arp.rs  buffer.rs  conntrack.rs  device.rs  firewall.rs  fragment.rs  icmp.rs  ipv4.rs  lib.rs  pci.rs  socket.rs  stack.rs  tcp.rs  udp.rs  virtio_net.rs
kernel/sched/: Cargo.toml  cpuset.rs  enhanced_scheduler.rs  lib.rs  lock_ordering.rs  process.rs  scheduler.rs
kernel/seccomp/: Cargo.toml  lib.rs  types.rs
kernel/security/: Cargo.toml  fips.rs  kaslr.rs  kptr.rs  lib.rs  memory_hardening.rs  rng.rs  spectre.rs  tests.rs  wxorx.rs
kernel/src/: demo.rs  integration_test.rs  interrupt_demo.rs  interrupts.rs  ipc.rs  main.rs  main.rs.bak  memory.rs  process.rs  process_demo.rs  runtime_tests.rs  scheduler.rs  stack_guard.rs  syscall.rs  syscall_demo.rs  usermode_test.rs  vga_buffer.rs
kernel/tlb_ops/: Cargo.toml  lib.rs
kernel/trace/: Cargo.toml  counters.rs  kdump.rs  lib.rs  profiler.rs  watchdog.rs
kernel/vfs/: Cargo.toml  cgroupfs.rs  devfs.rs  ext2.rs  initramfs.rs  lib.rs  manager.rs  mount_namespace.rs  procfs.rs  ramfs.rs  traits.rs  types.rs
kernel/virtio/src/: queue.rs  transport.rs
scripts/: boot_check.sh  musl_check.sh
userspace/src/: libc.rs  shell.rs  syscall.rs  syscall_test.rs
