[package]
name = "cap"
version = "0.1.0"
edition = "2021"
description = "Capability-based access control subsystem for Zero-OS"

[lib]
path = "lib.rs"

[dependencies]
spin = "0.9"
bitflags = "2.4"
x86_64 = "0.15"

# Cross-crate dependencies (within kernel workspace)
# Note: kernel_core removed to avoid cyclic dependency
# ProcessId and FileOps are defined locally in types.rs
drivers = { path = "../drivers" }
klog = { path = "../klog" }

[features]
default = []
