[package]
name = "iommu"
version = "0.1.0"
edition = "2021"
description = "IOMMU/VT-d support for DMA isolation"

[lib]
path = "lib.rs"

[features]
default = []
# Allow identity-mapped VT-d domains using pass-through translation.
# UNSAFE: Permits devices to DMA into arbitrary physical memory.
# Intended for debugging only; release builds must not enable this.
unsafe_identity_passthrough = []

[dependencies]
spin = "0.9"
x86_64 = "0.15"
bitflags = "2.4"
drivers = { path = "../drivers" }
mm = { path = "../mm" }
