[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
kernel_core = { path = "../kernel_core" }
drivers = { path = "../drivers" }
mm = { path = "../mm" }
x86_64 = "0.15"
vfs = { path = "../vfs" }
trace = { path = "../trace" }
klog = { path = "../klog" }