[package]
name = "kernel_core"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bitflags = "2.4"
drivers = { path = "../drivers" }
x86_64 = "0.15"
mm = { path = "../mm" }
xmas-elf = "0.9"
cpu_local = { path = "../cpu_local" }
audit = { path = "../audit" }
seccomp = { path = "../seccomp" }
cap = { path = "../cap" }
lsm = { path = "../lsm", features = ["lsm"] }
security = { path = "../security" }
net = { path = "../net" }
trace = { path = "../trace" }