[package]
name = "mm"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
drivers = { path = "../drivers" }
cpu_local = { path = "../cpu_local" }
tlb_ops = { path = "../tlb_ops" }
x86_64 = "0.15"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
linked_list_allocator = "0.10"
bit-vec = { version = "0.6", default-features = false }