[package]
name = "net"
version = "0.1.0"
edition = "2021"

[features]
default = ["conntrack"]
conntrack = []

[dependencies]
spin = "0.9"
mm = { path = "../mm" }
virtio = { path = "../virtio" }
drivers = { path = "../drivers" }
x86_64 = "0.15"
cap = { path = "../cap" }
lsm = { path = "../lsm" }
security = { path = "../security" }
iommu = { path = "../iommu" }
klog = { path = "../klog" }
