[package]
name = "sched"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
kernel_core = { path = "../kernel_core" }
drivers = { path = "../drivers" }
arch = { path = "../arch" }
cpu_local = { path = "../cpu_local" }
x86_64 = "0.15"