[package]
name = "sched"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[features]
default = []
# Enable lock dependency graph for cycle detection (debug builds only)
# This tracks edges between lock classes and detects potential deadlock cycles
lockdep_graph = []

[dependencies]
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
kernel_core = { path = "../kernel_core" }
drivers = { path = "../drivers" }
arch = { path = "../arch" }
cpu_local = { path = "../cpu_local" }
x86_64 = "0.15"
trace = { path = "../trace" }
klog = { path = "../klog" }